Setting up things + nearby places.

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -53,5 +53,7 @@
     <%= htmlWebpackPlugin.options.bodyScripts %>
 
     <!-- built files will be auto injected here -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVBzbvYKGj3AJOzYzfoJoV2keOdwdc6jg"></script>
   </body>
 </html>
