--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,6 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>">
+    <meta name="description" content="<%= htmlWebpackPlugin.options.pwaManifest.description %>">
     <title><%= htmlWebpackPlugin.options.productName %></title>
     <base href="<%= htmlWebpackPlugin.options.appBase %>">
 
