--- a/src/index.template.html
+++ b/src/index.template.html
@@ -55,6 +55,6 @@
 
     <!-- built files will be auto injected here -->
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVBzbvYKGj3AJOzYzfoJoV2keOdwdc6jg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVBzbvYKGj3AJOzYzfoJoV2keOdwdc6jg"></script>
   </body>
 </html>
